--- a/03_community.html
+++ b/03_community.html
@@ -200,7 +200,7 @@
   </nav>
   <!-- 푸터 -->
   <footer class="text-white text-center sticky-bottom fw-light opacity-75" style="background-color: #FFBAB9;">
-    Confernece of Korea Artificial-Intelligence Convergence Technology Society, by 박관호, 김용빈
+    Confernece of Korea Artificial-Intelligence Convergence Technology Society, by 박관호
   </footer>
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
