--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
   <style>
     @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
     @import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Noto+Sans+KR&display=swap');
+
+    @media (max-width: 1024px) {
+      body {
+        width: 1024px; /* 고정 너비 유지 */
+        overflow-x: scroll; /* 수평 스크롤 허용 */
+      }
+    }
     
     * {
       font-family: 'Do Hyeon', sans-serif;
