--- a/06_니지산지.html
+++ b/06_니지산지.html
@@ -38,6 +38,13 @@
     font-family: 'Do Hyeon', sans-serif;
     }
 
+  @media (max-width: 1024px) {
+      body {
+        width: 1024px; /* 고정 너비 유지 */
+        overflow-x: scroll; /* 수평 스크롤 허용 */
+      }
+    }
+  
     body {
       background: linear-gradient(to right, white, #f8c4dd, rgb(178, 243, 229));
       background-size: 200% 200%;
