--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 
   <!-- 섹션 -->
   <section id = "container" class="container mb-4">
-    <h2 class="text-center fw-bold my-5 fade-in-up" style="color: #35b3bc; letter-spacing: 3px; animation-delay: 0.2s; font-size: 3rem;">V-TUBER</h2>
+    <h2 class="text-center fw-bold my-5 fade-in-up" style="color: #35b3bc; letter-spacing: 3px; animation-delay: 0.2s; font-size: 3rem;">V-TUBER#클릭시 이동</h2>
     
     <!-- 첫 번째 행 -->
     <div class="row row-cols-1 row-cols-md-2 g-4">
